[gd_scene load_steps=38 format=3 uid="uid://k5puod3va2sl"]

[ext_resource type="Script" path="res://Scripts/PainterPro/PainterPro.gd" id="1_7ovk8"]
[ext_resource type="Script" path="res://Scripts/AppVisualTransition.gd" id="2_mj3dp"]
[ext_resource type="Script" path="res://Scripts/AppBase.gd" id="3_nj7e7"]
[ext_resource type="Script" path="res://Scripts/PainterPro/PainterPro_Functionality.gd" id="4_r13a0"]
[ext_resource type="Script" path="res://Scripts/PainterPro/PainterPro_Grid.gd" id="5_m7kve"]
[ext_resource type="Script" path="res://Scripts/PainterPro/PainterPro_Buttons.gd" id="6_rroo2"]
[ext_resource type="Texture2D" uid="uid://b7thb5ovhjmfl" path="res://Images/PaintAppIcons/drawing_brush.png" id="7_5qpyr"]
[ext_resource type="Texture2D" uid="uid://b3rqc13ffwi85" path="res://Images/PaintAppIcons/drawing_bucket.png" id="8_xmlpm"]
[ext_resource type="Texture2D" uid="uid://r81y0yqqvg3i" path="res://Images/PaintAppIcons/drawing_eraser.png" id="9_5ws72"]
[ext_resource type="Texture2D" uid="uid://d0k3y21iutw78" path="res://Images/PaintAppIcons/drawing_pen.png" id="10_tfhdy"]
[ext_resource type="Texture2D" uid="uid://dwhxy584w3pow" path="res://Images/PaintAppIcons/drawing_pencil.png" id="11_6socj"]
[ext_resource type="Texture2D" uid="uid://d1q8grqnee0k7" path="res://Images/PaintAppIcons/drawing_picker.png" id="12_jaskc"]
[ext_resource type="Texture2D" uid="uid://bfapn757gvlc8" path="res://Images/PaintAppIcons/drawing_spray.png" id="13_qsrsf"]
[ext_resource type="Texture2D" uid="uid://bhdhp3q5abpc1" path="res://Images/PaintAppIcons/tool_wand.png" id="14_xxp6e"]
[ext_resource type="Texture2D" uid="uid://dwfjasw3u6jh3" path="res://Images/PaintAppIcons/square custom.png" id="15_nenfs"]
[ext_resource type="Texture2D" uid="uid://b68h5e1ukpcy1" path="res://Images/PaintAppIcons/square custom not filled.png" id="16_uldvg"]
[ext_resource type="Texture2D" uid="uid://m3it5voohv1n" path="res://Images/PaintAppIcons/progress_empty.png" id="17_i8o5h"]
[ext_resource type="Texture2D" uid="uid://oyhcxnko3ac5" path="res://Images/resize_a_diagonal.png" id="18_qinw4"]
[ext_resource type="Texture2D" uid="uid://dikljviysiu5e" path="res://Images/PaintAppIcons/circle custom filled.png" id="19_kctf0"]
[ext_resource type="Script" path="res://Scripts/PainterPro/PainterPro_SideWindow.gd" id="20_vc0ct"]
[ext_resource type="Texture2D" uid="uid://cjmfu02n6qg7a" path="res://Images/tracking_horizontal_up.png" id="21_tjatr"]
[ext_resource type="Texture2D" uid="uid://dkrbwqj75e6g2" path="res://Images/cross_small.png" id="22_r7aow"]
[ext_resource type="Texture2D" uid="uid://cy466yisyc6ha" path="res://Images/line_horizontal.png" id="23_xexdc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wa8am"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p6vc0"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)
corner_radius_top_right = 20
corner_radius_bottom_right = 20

[sub_resource type="Gradient" id="Gradient_x5mq7"]
colors = PackedColorArray(0.0807833, 0.0807833, 0.0807833, 1, 0.288518, 0.288518, 0.288518, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lkc23"]
gradient = SubResource("Gradient_x5mq7")
fill_from = Vector2(1, 0)
fill_to = Vector2(1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kjvpc"]
texture = SubResource("GradientTexture2D_lkc23")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_varbv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p5rgd"]
bg_color = Color(0.227451, 0.227451, 0.227451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5wlo7"]
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cp2tr"]
bg_color = Color(1, 0, 0, 1)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i12xf"]
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pxft1"]
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8fp44"]
bg_color = Color(0.370364, 0.370364, 0.370364, 1)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1gnot"]
bg_color = Color(0.195313, 0.195313, 0.195313, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tjdy3"]
bg_color = Color(0.258824, 0.258824, 0.258824, 1)

[node name="PainterPro" type="Panel"]
offset_right = 1920.0
offset_bottom = 1040.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wa8am")
script = ExtResource("1_7ovk8")

[node name="AppVisualTransitionComponent" type="Node" parent="."]
script = ExtResource("2_mj3dp")

[node name="AppBaseComponent" type="Node" parent="."]
script = ExtResource("3_nj7e7")

[node name="PainterPro" type="Control" parent="."]
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1040.0
script = ExtResource("4_r13a0")

[node name="Backdrop" type="ColorRect" parent="PainterPro"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1040.0
color = Color(0, 1, 1, 1)

[node name="ArtCanvas" type="TextureRect" parent="PainterPro"]
texture_filter = 1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1040.0
expand_mode = 1

[node name="Grid" type="TextureRect" parent="PainterPro"]
visible = false
texture_filter = 1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
expand_mode = 1
script = ExtResource("5_m7kve")

[node name="Buttons" type="Panel" parent="PainterPro"]
layout_mode = 0
offset_top = 136.0
offset_right = 88.0
offset_bottom = 1032.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p6vc0")
script = ExtResource("6_rroo2")

[node name="SelectionBox" type="ColorRect" parent="PainterPro/Buttons"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
color = Color(0.164706, 0.623529, 0.878431, 1)

[node name="BrushSize" type="SpinBox" parent="PainterPro/Buttons"]
layout_mode = 0
offset_top = 520.0
offset_right = 83.0625
offset_bottom = 576.0
min_value = 1.0
value = 1.0
rounded = true
alignment = 1
update_on_text_changed = true
suffix = "px"
select_all_on_focus = true

[node name="Brush" type="TextureButton" parent="PainterPro/Buttons"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture_normal = ExtResource("7_5qpyr")

[node name="Fill" type="TextureButton" parent="PainterPro/Buttons"]
layout_mode = 0
offset_top = 64.0
offset_right = 64.0
offset_bottom = 128.0
texture_normal = ExtResource("8_xmlpm")

[node name="Eraser" type="TextureButton" parent="PainterPro/Buttons"]
layout_mode = 0
offset_top = 128.0
offset_right = 64.0
offset_bottom = 192.0
texture_normal = ExtResource("9_5ws72")

[node name="BigBrush" type="TextureButton" parent="PainterPro/Buttons"]
layout_mode = 0
offset_top = 192.0
offset_right = 64.0
offset_bottom = 256.0
texture_normal = ExtResource("10_tfhdy")

[node name="VeryBigBrush" type="TextureButton" parent="PainterPro/Buttons"]
layout_mode = 0
offset_top = 256.0
offset_right = 64.0
offset_bottom = 320.0
texture_normal = ExtResource("11_6socj")

[node name="Picker" type="TextureButton" parent="PainterPro/Buttons"]
layout_mode = 0
offset_top = 320.0
offset_right = 64.0
offset_bottom = 384.0
texture_normal = ExtResource("12_jaskc")

[node name="TextureButton7" type="TextureButton" parent="PainterPro/Buttons"]
layout_mode = 0
offset_top = 383.0
offset_right = 64.0
offset_bottom = 447.0
disabled = true
texture_normal = ExtResource("13_qsrsf")

[node name="TextureButton8" type="TextureButton" parent="PainterPro/Buttons"]
layout_mode = 0
offset_top = 448.0
offset_right = 64.0
offset_bottom = 512.0
disabled = true
texture_normal = ExtResource("14_xxp6e")

[node name="Rectangle" type="TextureButton" parent="PainterPro/Buttons"]
layout_mode = 0
offset_top = 576.0
offset_right = 64.0
offset_bottom = 640.0
texture_normal = ExtResource("15_nenfs")

[node name="TextureButton12" type="TextureButton" parent="PainterPro/Buttons"]
layout_mode = 0
offset_top = 640.0
offset_right = 64.0
offset_bottom = 704.0
disabled = true
texture_normal = ExtResource("16_uldvg")

[node name="Circle" type="TextureButton" parent="PainterPro/Buttons"]
layout_mode = 0
offset_top = 768.0
offset_right = 64.0
offset_bottom = 832.0
texture_normal = ExtResource("17_i8o5h")

[node name="Line" type="TextureButton" parent="PainterPro/Buttons"]
layout_mode = 0
offset_top = 832.0
offset_right = 64.0
offset_bottom = 896.0
disabled = true
texture_normal = ExtResource("18_qinw4")

[node name="CircleFilled" type="TextureButton" parent="PainterPro/Buttons"]
layout_mode = 0
offset_top = 704.0
offset_right = 64.0
offset_bottom = 768.0
texture_normal = ExtResource("19_kctf0")

[node name="SideWindow" type="Panel" parent="PainterPro"]
layout_mode = 0
offset_left = 1616.0
offset_top = 56.0
offset_right = 1920.0
offset_bottom = 696.0
theme_override_styles/panel = SubResource("StyleBoxTexture_kjvpc")
script = ExtResource("20_vc0ct")

[node name="TabBar" type="TabBar" parent="PainterPro/SideWindow"]
layout_mode = 0
offset_right = 304.0
offset_bottom = 40.0
tab_alignment = 2
drag_to_rearrange_enabled = true
tab_count = 4
tab_0/title = "Colour"
tab_1/title = "Tool"
tab_2/title = "General"
tab_3/title = "Other"

[node name="Colour" type="Control" parent="PainterPro/SideWindow"]
anchors_preset = 0
offset_top = 48.0
offset_right = 304.0
offset_bottom = 640.0

[node name="ColorPicker" type="ColorPicker" parent="PainterPro/SideWindow/Colour"]
layout_mode = 0
offset_left = 616.0
offset_top = 312.0
offset_right = 602.0
offset_bottom = 880.0
color = Color(0, 0, 0, 1)

[node name="Tool" type="Control" parent="PainterPro/SideWindow"]
anchors_preset = 0
offset_top = 48.0
offset_right = 304.0
offset_bottom = 640.0

[node name="General" type="Control" parent="PainterPro/SideWindow"]
anchors_preset = 0
offset_top = 48.0
offset_right = 304.0
offset_bottom = 640.0

[node name="LocateCanvas" type="Button" parent="PainterPro/SideWindow/General"]
layout_mode = 0
offset_left = 8.0
offset_right = 298.0
offset_bottom = 32.0
text = "Locate Canvas"

[node name="SetBackdrop" type="Button" parent="PainterPro/SideWindow/General"]
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 298.0
offset_bottom = 104.0
text = "Set Backdrop 
(To current Selected Colour)"

[node name="Other" type="Control" parent="PainterPro/SideWindow"]
visible = false
anchors_preset = 0
offset_top = 48.0
offset_right = 304.0
offset_bottom = 640.0

[node name="ZoomByTopLeft" type="CheckButton" parent="PainterPro/SideWindow/Other"]
layout_mode = 0
offset_left = 96.0
offset_top = 544.0
offset_right = 296.0
offset_bottom = 584.0
text = "Zoom by top-left"

[node name="SideWindowToggle" type="Button" parent="PainterPro/SideWindow"]
layout_mode = 0
offset_right = 72.0
offset_bottom = 72.0
scale = Vector2(0.44541, 0.44541)
theme_override_styles/focus = SubResource("StyleBoxEmpty_varbv")
toggle_mode = true
icon = ExtResource("21_tjatr")

[node name="Timer" type="Timer" parent="PainterPro/SideWindow"]

[node name="TopPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 1616.0
offset_right = 1920.0
offset_bottom = 56.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p5rgd")

[node name="CloseButton" type="Button" parent="TopPanel"]
layout_mode = 0
offset_left = 224.0
offset_right = 296.0
offset_bottom = 48.0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_5wlo7")
theme_override_styles/hover = SubResource("StyleBoxFlat_cp2tr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i12xf")
theme_override_styles/disabled = SubResource("StyleBoxFlat_pxft1")

[node name="TextureRect" type="TextureRect" parent="TopPanel/CloseButton"]
layout_mode = 0
offset_left = 12.0
offset_right = 79.0
offset_bottom = 64.0
scale = Vector2(0.714445, 0.714445)
texture = ExtResource("22_r7aow")

[node name="MinimiseButton" type="Button" parent="TopPanel"]
layout_mode = 0
offset_left = 144.0
offset_right = 216.0
offset_bottom = 48.0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_5wlo7")
theme_override_styles/hover = SubResource("StyleBoxFlat_8fp44")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i12xf")
theme_override_styles/disabled = SubResource("StyleBoxFlat_pxft1")

[node name="TextureRect" type="TextureRect" parent="TopPanel/MinimiseButton"]
layout_mode = 0
offset_left = 11.0
offset_right = 78.0
offset_bottom = 64.0
scale = Vector2(0.714445, 0.714445)
texture = ExtResource("23_xexdc")

[node name="TopOptions" type="Panel" parent="."]
layout_mode = 0
offset_right = 1616.0
offset_bottom = 32.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1gnot")

[node name="File" type="MenuButton" parent="TopOptions"]
layout_mode = 0
offset_right = 72.0
offset_bottom = 32.0
theme_override_styles/normal = SubResource("StyleBoxFlat_tjdy3")
text = "File"
item_count = 3
popup/item_0/text = "Save"
popup/item_0/id = 0
popup/item_1/text = "Save As"
popup/item_1/id = 1
popup/item_2/text = "Export"
popup/item_2/id = 2

[node name="Edit" type="MenuButton" parent="TopOptions"]
layout_mode = 0
offset_left = 72.0
offset_right = 144.0
offset_bottom = 32.0
theme_override_styles/normal = SubResource("StyleBoxFlat_tjdy3")
text = "Edit"
item_count = 1
popup/item_0/text = "New"
popup/item_0/id = 0

[node name="View" type="MenuButton" parent="TopOptions"]
layout_mode = 0
offset_left = 144.0
offset_right = 216.0
offset_bottom = 32.0
theme_override_styles/normal = SubResource("StyleBoxFlat_tjdy3")
text = "View"
item_count = 1
popup/item_0/text = "Show Grid"
popup/item_0/id = 0

[node name="Image" type="MenuButton" parent="TopOptions"]
layout_mode = 0
offset_left = 216.0
offset_right = 288.0
offset_bottom = 32.0
theme_override_styles/normal = SubResource("StyleBoxFlat_tjdy3")
text = "Image"
item_count = 1
popup/item_0/text = "Set Background"
popup/item_0/id = 0

[connection signal="mouse_entered" from="PainterPro/ArtCanvas" to="PainterPro" method="_on_art_canvas_mouse_entered" flags=18]
[connection signal="mouse_exited" from="PainterPro/ArtCanvas" to="PainterPro" method="_on_art_canvas_mouse_exited" flags=18]
[connection signal="tab_changed" from="PainterPro/SideWindow/TabBar" to="PainterPro/SideWindow" method="_on_tab_bar_tab_changed" flags=18]
[connection signal="color_changed" from="PainterPro/SideWindow/Colour/ColorPicker" to="PainterPro" method="_on_color_picker_color_changed" flags=18]
[connection signal="pressed" from="PainterPro/SideWindow/General/LocateCanvas" to="PainterPro/SideWindow" method="_on_locate_canvas_pressed" flags=18]
[connection signal="pressed" from="PainterPro/SideWindow/General/SetBackdrop" to="PainterPro/SideWindow" method="_on_set_backdrop_pressed" flags=18]
[connection signal="toggled" from="PainterPro/SideWindow/Other/ZoomByTopLeft" to="PainterPro/SideWindow" method="_on_zoom_by_top_left_toggled" flags=18]
[connection signal="toggled" from="PainterPro/SideWindow/SideWindowToggle" to="PainterPro/SideWindow" method="_on_side_window_toggle_toggled" flags=18]
